--- a/Enhanced_Facts_Generation/site/en/tutorials/python_quickstart.ipynb
+++ b/Enhanced_Facts_Generation/site/en/tutorials/python_quickstart.ipynb
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "9OEoeosRTv-5"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "TS9l5igubpHO"
       },
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "d10c38a5c91f"
       },
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "ab9ASynfcIZn"
       },
@@ -216,14 +216,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "QvvWFy08e5c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
         },
-        "outputId": "929f6dc1-0b02-474d-ca0c-6c0f050625a9"
+        "outputId": "50d34159-0181-4d31-fe21-a7ad841e103c"
       },
       "outputs": [
         {
@@ -269,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "2bcfnGEviwTI"
       },
@@ -292,12 +292,12 @@
     {
       "cell_type": "code",
       "source": [
-        "def to_get_response(query):\n",
+        "def to_get_response(fact):\n",
         "    # Assuming model and generate_content function are defined somewhere else in your code\n",
-        "    response = model.generate_content(f\"You have to generate Enhanced facts based on fact, for example Fact: Loan pending with the bank, then the Enhanced Fact: A loan is pending with a bank,  then for Query: '{query}' \")\n",
+        "    response = model.generate_content(f\"You have to generate Enhanced facts based on fact, for example Fact: Loan pending with the bank, then the Enhanced Fact: A loan is pending with a bank,  then for Query: '{fact}' \", safety_settings={'HARASSMENT':'block_none'})\n",
         "\n",
         "    prompt = textwrap.dedent(f'''\n",
-        "        Fact: '{query}'\n",
+        "        Fact: '{fact}'\n",
         "        Enhanced Fact: '{response.text}'\n",
         "    ''')\n",
         "\n",
@@ -306,24 +306,24 @@
       "metadata": {
         "id": "oxiIUEC5WeRO"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "query = \"The accused did not create or submit forged documents to the authority\""
+        "fact = \"The accused did not create or submit forged documents to the authority\""
       ],
       "metadata": {
         "id": "WCUpJu1EaV0E"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "prompt = to_get_response(query)\n",
+        "prompt = to_get_response(fact)\n",
         "print(prompt)"
       ],
       "metadata": {
@@ -332,9 +332,9 @@
           "height": 86
         },
         "id": "bMNCQprLaE69",
-        "outputId": "ce29f400-669a-4b99-b8d6-e7f1f87b530d"
+        "outputId": "1509b743-cfdb-48fa-be33-cf61783822be"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +342,7 @@
           "text": [
             "\n",
             "Fact: 'The accused did not create or submit forged documents to the authority'\n",
-            "Enhanced Fact: '**Enhanced Fact:** The accused did not fabricate or submit falsified documents to the authority.'\n",
+            "Enhanced Fact: 'Enhanced Fact: The accused is alleged to not have created or submitted forged documents to the authority'\n",
             "\n"
           ]
         }
@@ -350,41 +350,106 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "0UIt5LKp16jL"
-      },
-      "outputs": [],
       "source": [
-        "response = model.generate_content('[Questionable prompt here]',\n",
-        "                                  safety_settings={'HARASSMENT':'block_none'})\n",
-        "response.text"
+        "fact = \"Loan pending with the bank.\""
+      ],
+      "metadata": {
+        "id": "gSBbdSvwolBX"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = to_get_response(fact)\n",
+        "print(prompt)"
+      ],
+      "metadata": {
+        "id": "5g3JnhPnolKs",
+        "outputId": "29661657-a604-40a9-93b6-d140c858a6e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Fact: 'Loan pending with the bank.'\n",
+            "Enhanced Fact: 'Enhanced Fact: A loan is pending with a bank.'\n",
+            "\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "fact = \"Physical or mental torture\""
+      ],
+      "metadata": {
+        "id": "Uufb88HAolVo"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = to_get_response(fact)\n",
+        "print(prompt)"
+      ],
+      "metadata": {
+        "id": "JMZMXoewoldU",
+        "outputId": "7608a838-1399-40c1-b45d-c178464534f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Fact: 'Physical or mental torture'\n",
+            "Enhanced Fact: 'Enhanced Fact: Physical or mental torture may be a form of mistreatment and may be a violation of human rights.'\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "id": "he-OfzBbhACQ",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "66284296-b3ff-4be5-e228-476cf5879999"
+        "outputId": "98681979-8c9e-4820-ddee-e9e5ae2e4df0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 76.3 ms, sys: 6.02 ms, total: 82.3 ms\n",
-            "Wall time: 4.35 s\n"
+            "CPU times: user 18.4 ms, sys: 3.64 ms, total: 22.1 ms\n",
+            "Wall time: 2.15 s\n"
           ]
         }
       ],
       "source": [
         "%%time\n",
-        "response = model.generate_content(\"You have to generate Research book name based on query: for example Query: Cheque Bounce then the\tResearch Book Name may be :Cheque Bounce Chronicles: Legal Perspectives and Summaries,  then for Query: Sibling Murder \")"
+        "response = model.generate_content(\"You have to generate Enhanced facts based on fact, for example Fact: Loan pending with the bank, then the Enhanced Fact: A loan is pending with a bank,  then for Fact: The accused did not create or submit forged documents to the authority \", safety_settings={'HARASSMENT':'block_none'})"
       ]
     },
     {
@@ -397,15 +462,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ePTT1VxdZ2mr",
-        "outputId": "59b34a98-7af2-44be-8b87-b7b741aa5f31"
+        "outputId": "ad7a80b7-1663-4cf3-cdfc-052f5e75f6f5"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Research Book Name: Sibling Discord: A Legal and Psychological Examination of Sibling Murder\n"
+            "Enhanced Fact: The accused did not create or submit fabricated documents to the authority\n"
           ]
         }
       ]
@@ -421,14 +486,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "G-zBkueElVEO",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 62
         },
-        "outputId": "9169db49-0e5b-416e-dafd-15144f5bd265"
+        "outputId": "a6df8597-46fc-4768-b072-b20b974d89a9"
       },
       "outputs": [
         {
@@ -437,10 +502,10 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "> Research Book Name: Legally Binding Last Wills: A Comprehensive Guide to Final Testamentary Documents"
+            "text/markdown": "> Enhanced Fact: The accused did not create or submit fabricated documents to the authority"
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 13
         }
       ],
       "source": [
