--- a/Researchbook_Name_Generation/site/en/tutorials/python_quickstart.ipynb
+++ b/Researchbook_Name_Generation/site/en/tutorials/python_quickstart.ipynb
@@ -100,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "9OEoeosRTv-5"
       },
@@ -129,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "TS9l5igubpHO"
       },
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "d10c38a5c91f"
       },
@@ -197,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "ab9ASynfcIZn"
       },
@@ -225,14 +225,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "QvvWFy08e5c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
         },
-        "outputId": "929f6dc1-0b02-474d-ca0c-6c0f050625a9"
+        "outputId": "f709dfa4-7a60-45cb-e87c-6ee79dbd1412"
       },
       "outputs": [
         {
@@ -278,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "2bcfnGEviwTI"
       },
@@ -303,7 +303,7 @@
       "source": [
         "def to_get_response(query):\n",
         "    # Assuming model and generate_content function are defined somewhere else in your code\n",
-        "    response = model.generate_content(f\"You have to generate Research book name based on query: for example Query: Cheque Bounce then the Research Book Name may be: Cheque Bounce Chronicles: Legal Perspectives and Summaries,  then for Query: '{query}' \")\n",
+        "    response = model.generate_content(f\"You have to generate Research book name based on query: for example Query: Cheque Bounce then the Research Book Name may be: Cheque Bounce Chronicles: Legal Perspectives and Summaries,  then for Query: '{query}' \",safety_settings={'HARASSMENT':'block_none'})\n",
         "\n",
         "    prompt = textwrap.dedent(f'''\n",
         "        Query: '{query}'\n",
@@ -315,7 +315,7 @@
       "metadata": {
         "id": "oxiIUEC5WeRO"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -326,21 +326,8 @@
       "metadata": {
         "id": "WCUpJu1EaV0E"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "0UIt5LKp16jL"
-      },
-      "outputs": [],
-      "source": [
-        "response = model.generate_content('[Questionable prompt here]',\n",
-        "                                  safety_settings={'HARASSMENT':'block_none'})\n",
-        "response.text"
-      ]
     },
     {
       "cell_type": "code",
@@ -350,21 +337,101 @@
       ],
       "metadata": {
         "id": "bMNCQprLaE69",
-        "outputId": "a16ba630-9619-4eea-fbb2-d4dfe0f23c97",
+        "outputId": "2f7c1984-d4fe-41f9-df6a-dec17b355aa4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 86
+          "height": 121
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Query: 'Murder'\n",
-            "Research book name: 'Murder Chronicles: Cases, Investigations, and Trials'\n",
+            "        Query: 'Murder'\n",
+            "        Research book name: '**Query**: ''''\n",
+            "\n",
+            "**Research Book Name**: Research Book Names on ''\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "query = \"Siblings Murder\""
+      ],
+      "metadata": {
+        "id": "YY2wxJ2LtfBe"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = to_get_response(query)\n",
+        "print(prompt)"
+      ],
+      "metadata": {
+        "id": "wCCR0NbqtfI_",
+        "outputId": "fddbb39e-72a5-40ac-abc9-12458f1f3498",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Query: 'Siblings Murder'\n",
+            "Research book name: 'Siblingcide Syndrome: A Psychological and Forensic Examination'\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "query = \"Is a last will considered the final will of a person?\""
+      ],
+      "metadata": {
+        "id": "ShP-PDe5tfMq"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = to_get_response(query)\n",
+        "print(prompt)"
+      ],
+      "metadata": {
+        "id": "B5uUaRR9tfXF",
+        "outputId": "d04c1921-1f31-4e94-d36f-1ca92e3591c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Query: 'Is a last will considered the final will of a person?'\n",
+            "Research book name: '**Research Book Name:** The Enforceability of Last Wills: A Comprehensive Guide to Testamentary Law'\n",
             "\n"
           ]
         }
